<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/AddGameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/GameAddHeaderText"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ListAddInput"
            style="@style/MyEditTextStyle"
            android:layout_width="87dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:hint="@string/gameInputText"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddGameHeader"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/genreAddInput"
            style="@style/MyEditTextStyle"
            android:layout_width="87dp"
            android:layout_height="44dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:hint="@string/gameInputText"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/ListAddInput"
            app:layout_constraintTop_toBottomOf="@+id/AddGameHeader"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/AddButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/addButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/genreAddInput"
            app:layout_constraintTop_toBottomOf="@+id/AddGameHeader" />

        <ListView
            android:id="@+id/ListView"
            style="@android:style/Widget.DeviceDefault.Light.ListView"
            android:layout_width="224dp"
            android:layout_height="617dp"
            android:layout_marginTop="8dp"
            android:background="#00B42C2C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ListAddInput"
            android:dividerHeight="0dp"
            android:divider="@null"/>

        <ListView
            android:id="@+id/GenreListView"
            android:layout_width="145dp"
            android:layout_height="622dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toEndOf="@+id/ListView"
            app:layout_constraintTop_toBottomOf="@+id/ListAddInput"
            android:dividerHeight="0dp"
            android:divider="@null"/>

        <Button
            android:id="@+id/ActivityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ActivityButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>