<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gamedetails"
    android:background="?attr/backgroundcolor">
    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundcolor" />

    <TextView
        android:id="@+id/GameNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textColor="?attr/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/GameNameDetails"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/GameDetailsStyle"/>

    <TextView
        android:id="@+id/GenreDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="?attr/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/GenreDetails"
        app:layout_constraintTop_toBottomOf="@+id/GameNameDetail"
        style="@style/GameDetailsStyle"/>


    <TextView
        android:id="@+id/ScoreDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="?attr/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ScoreDetails"
        app:layout_constraintTop_toBottomOf="@+id/GenreDetail"
        style="@style/GameDetailsStyle"/>


    <TextView
        android:id="@+id/GameNameDetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/GameNameColumnText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/GameDetailsStyle"/>

    <TextView
        android:id="@+id/GenreDetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/GameGenreColumnText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameNameDetails"
        style="@style/GameDetailsStyle"/>


    <TextView
        android:id="@+id/ScoreDetails"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenreDetails"
        style="@style/GameDetailsStyle"/>

    <TextView
        android:id="@+id/gameHoursPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ScoreDetails"
        app:layout_constraintTop_toBottomOf="@+id/ScoreDetail" />

    <TextView
        android:id="@+id/gameStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ScoreDetails"
        app:layout_constraintTop_toBottomOf="@+id/gameHoursPlayed" />


</androidx.constraintlayout.widget.ConstraintLayout>